--- a/style.css
+++ b/style.css
@@ -1,74 +1,58 @@
-body{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+.container {
+    margin: auto;
+    /*justify-content: center;
+    align-items: center;*/
+    height:550px;
+    margin-top: 50px;
     background-color: rgb(228, 234, 236);
-    width: 100%;
-    padding: 10px;
-}
-
-
-main {
-    border: 2px solid ;
+    width: 30%;
     padding: 20px;
-    width: 400px;
-    background-color: rgb(240, 239, 237);
-    height: 80%;
+    border: 2px solid black;
     
 }
 
-
-div{
+#one {
     margin-left: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
-h2{
-    margin-left: 20px;
-}
-
-p{
+p {
     font-size: small;
     font-style: italic;
 }
 
-
-input{
+input {
     padding: 10px;
     border:2px solid black;
-    border-color: black;
     margin-left: 50px;
     margin-top: 20px;
     text-align: center;
     font-weight: 700;
-    
 }
 
-
-button{
-    padding: 10px;
+button {
+     padding: 10px;
     margin-top: 10px;
     margin-left: 50px;
-    width: 199px;
+    width: 200px;
     background-color: black;
     color: white;
+    border: 2px solid black;
 
 }
+
+
+a {
+    text-decoration: underline 1px black;
+}
+
 
 .two {
-    text-align: center;
+     text-align: center;
     margin-right: 60px;
 }
-a {
-    color: black;
-}
+
 
 img{
     width: 350px;
 }
-
-
-
